# boot_ai_agent

./: .gitignore  main.py  prompts.py  pyproject.toml  tools_schemas.py
calculator/: main.py
functions/: dummy_run.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
tests/: test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
